--- a/public/global.css
+++ b/public/global.css
@@ -1,168 +1,287 @@
-html{
-    line-height:1.15;
-    -webkit-text-size-adjust:100%
+html {
+	line-height: 1.15;
+	-webkit-text-size-adjust: 100%
 }
-body{
-    margin:0
+
+body {
+	margin: 0
 }
-img{
-    border-style:none
+
+img {
+	border-style: none
 }
-button,input{
-    font-family:inherit;
-    font-size:100%;
-    line-height:1.15;
-    margin:0
+
+button,
+input {
+	font-family: inherit;
+	font-size: 100%;
+	line-height: 1.15;
+	margin: 0;
+	overflow: visible
 }
-button,input{
-    overflow:visible
+
+button {
+	text-transform: none
 }
-button{
-    text-transform:none
+
+[type=button],
+[type=reset],
+button {
+	-webkit-appearance: button
 }
-[type=button],[type=reset],button{
-    -webkit-appearance:button
+
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+button::-moz-focus-inner {
+	border-style: none;
+	padding: 0
 }
-[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,button::-moz-focus-inner{
-    border-style:none;
-    padding:0
+
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+button:-moz-focusring {
+	outline: 1px dotted ButtonText
 }
-[type=button]:-moz-focusring,[type=reset]:-moz-focusring,button:-moz-focusring{
-    outline:1px dotted ButtonText
+
+button {
+	background-color: transparent;
+	background-image: none
 }
-button{
-    background-color:transparent;
-    background-image:none;
-    padding:0
+
+button:focus {
+	outline: 1px dotted;
+	outline: 5px auto -webkit-focus-ring-color
 }
-button:focus{
-    outline:1px dotted;
-    outline:5px auto -webkit-focus-ring-color
+
+html {
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+	line-height: 1.5
 }
-html{
-    font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-    line-height:1.5
+
+*,
+:after,
+:before {
+	box-sizing: border-box;
+	border: 0 solid #e2e8f0
 }
-*{
-    box-sizing:border-box;
-    border:0 solid #e2e8f0
+
+img {
+	border-style: solid
 }
-img{
-    border-style:solid
+
+input::placeholder {
+	color: #a0aec0
 }
-input::placeholder{
-    color:#a0aec0
+
+button {
+	cursor: pointer
 }
-button{
-    cursor:pointer
+
+button,
+input {
+	padding: 0;
+	line-height: inherit;
+	color: inherit
 }
-button,input{
-    padding:0;
-    line-height:inherit;
-    color:inherit
+
+img {
+	display: block;
+	vertical-align: middle;
+	max-width: 100%;
+	height: auto
 }
-img{
-    display:block;
-    vertical-align:middle
+
+.appearance-none {
+	appearance: none
 }
-img{
-    max-width:100%;
-    height:auto
+
+.bg-gray-200 {
+	--bg-opacity: 1;
+	background-color: #edf2f7;
+	background-color: rgba(237, 242, 247, var(--bg-opacity))
 }
-.appearance-none{
-    appearance:none
+
+.bg-gray-900 {
+	--bg-opacity: 1;
+	background-color: #1a202c;
+	background-color: rgba(26, 32, 44, var(--bg-opacity))
 }
-.bg-gray-200{
-    background-color:#edf2f7
+
+.bg-blue-500 {
+	--bg-opacity: 1;
+	background-color: #4299e1;
+	background-color: rgba(66, 153, 225, var(--bg-opacity))
 }
-.bg-gray-900{
-    background-color:#1a202c
+
+.hover\:bg-white:hover {
+	--bg-opacity: 1;
+	background-color: #fff;
+	background-color: rgba(255, 255, 255, var(--bg-opacity))
 }
-.bg-blue-500{
-    background-color:#4299e1
+
+.hover\:bg-blue-400:hover {
+	--bg-opacity: 1;
+	background-color: #63b3ed;
+	background-color: rgba(99, 179, 237, var(--bg-opacity))
 }
-.hover\:bg-white:hover{
-    background-color:#fff
+
+.focus\:bg-white:focus {
+	--bg-opacity: 1;
+	background-color: #fff;
+	background-color: rgba(255, 255, 255, var(--bg-opacity))
 }
-.hover\:bg-blue-400:hover{
-    background-color:#63b3ed
+
+.border-transparent {
+	border-color: transparent
 }
-.focus\:bg-white:focus{
-    background-color:#fff
+
+.border-blue-700 {
+	--border-opacity: 1;
+	border-color: #2b6cb0;
+	border-color: rgba(43, 108, 176, var(--border-opacity))
 }
-.border-transparent{
-    border-color:transparent
+
+.hover\:border-gray-300:hover {
+	--border-opacity: 1;
+	border-color: #e2e8f0;
+	border-color: rgba(226, 232, 240, var(--border-opacity))
 }
-.border-blue-700{
-    border-color:#2b6cb0
+
+.hover\:border-blue-500:hover {
+	--border-opacity: 1;
+	border-color: #4299e1;
+	border-color: rgba(66, 153, 225, var(--border-opacity))
 }
-.hover\:border-gray-300:hover{
-    border-color:#e2e8f0
+
+.focus\:border-gray-300:focus {
+	--border-opacity: 1;
+	border-color: #e2e8f0;
+	border-color: rgba(226, 232, 240, var(--border-opacity))
 }
-.hover\:border-blue-500:hover{
-    border-color:#4299e1
+
+.rounded {
+	border-radius: .25rem
 }
-.focus\:border-gray-300:focus{
-    border-color:#e2e8f0
+
+.border {
+	border-width: 1px
 }
-.rounded{
-    border-radius:.25rem
+
+.border-b-4 {
+	border-bottom-width: 4px
 }
-.border{
-    border-width:1px
+
+.flex {
+	display: flex
 }
-.border-b-4{
-    border-bottom-width:4px
+
+.flex-wrap {
+	flex-wrap: wrap
 }
-.flex{
-    display:flex
+
+.content-center {
+	align-content: center
 }
-.flex-wrap{
-    flex-wrap:wrap
+
+.font-bold {
+	font-weight: 700
 }
-.content-center{
-    align-content:center
+
+.h-screen {
+	height: 100vh
 }
-.font-bold{
-    font-weight:700
+
+.leading-tight {
+	line-height: 1.25
 }
-.h-screen{
-    height:100vh
+
+.my-2 {
+	margin-top: .5rem;
+	margin-bottom: .5rem
 }
-.leading-tight{
-    line-height:1.25
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto
 }
-.my-2{
-    margin-top:.5rem;
-    margin-bottom:.5rem
+
+.focus\:outline-none:focus {
+	outline: 0
 }
-.mx-auto{
-    margin-left:auto;
-    margin-right:auto
+
+.py-2 {
+	padding-top: .5rem;
+	padding-bottom: .5rem
 }
-.focus\:outline-none:focus{
-    outline:0
+
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem
 }
-.py-2{
-    padding-top:.5rem;
-    padding-bottom:.5rem
+
+.focus\:shadow-outline:focus {
+	box-shadow: 0 0 0 3px rgba(66, 153, 225, .5)
 }
-.px-4{
-    padding-left:1rem;
-    padding-right:1rem
+
+.text-center {
+	text-align: center
 }
-.focus\:shadow-outline:focus{
-    box-shadow:0 0 0 3px rgba(66,153,225,.5)
+
+.text-white {
+	--text-opacity: 1;
+	color: #fff;
+	color: rgba(255, 255, 255, var(--text-opacity))
 }
-.text-center{
-    text-align:center
+
+.text-gray-700 {
+	--text-opacity: 1;
+	color: #4a5568;
+	color: rgba(74, 85, 104, var(--text-opacity))
 }
-.text-white{
-    color:#fff
+
+.w-full {
+	width: 100%
 }
-.text-gray-700{
-    color:#4a5568
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg)
+	}
+	to {
+		transform: rotate(1turn)
+	}
 }
-.w-full{
-    width:100%
+
+@keyframes ping {
+	0% {
+		transform: scale(1);
+		opacity: 1
+	}
+	75%,
+	to {
+		transform: scale(2);
+		opacity: 0
+	}
+}
+
+@keyframes pulse {
+	0%,
+	to {
+		opacity: 1
+	}
+	50% {
+		opacity: .5
+	}
+}
+
+@keyframes bounce {
+	0%,
+	to {
+		transform: translateY(-25%);
+		animation-timing-function: cubic-bezier(.8, 0, 1, 1)
+	}
+	50% {
+		transform: translateY(0);
+		animation-timing-function: cubic-bezier(0, 0, .2, 1)
+	}
 }
